@@ -11,7 +11,7 @@ $pageno = $_REQUEST['pageno'] ?? 1;
 $groupname = (isset($_REQUEST['groupname']) && !empty($_REQUEST['groupname'])) ? $_REQUEST['groupname'] : '';
 
 $conditions = ['active' => 0];
-$conditions += empty($groupname) ? [] : ['name' => ['LIKE' => '%$groupname%']];
+$conditions += empty($groupname) ? [] : ['name' => ['LIKE' => "%$groupname%"]];
 
 $count = Groups::find('count', ['conditions' => $conditions]);
 $grouplist = Groups::getRange($pageno,ITEMS_PER_PAGE, $groupname, false);
